--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Lista de compras inteligente e rápida" />
     <meta name="theme-color" content="#22c55e" />
-    <title>Smart Grocery List</title>
+    <title>Lista de Mercado DEA</title>
   </head>
   <body>
     <div id="root"></div>
