--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Lista de compras inteligente e rápida" />
-    <meta name="theme-color" content="#22c55e" />
-    <title>Lista de Mercado DEA</title>
+    <meta name="description" content="WillCompras • App rápido para montar listas e finalizar compras no mercado." />
+    <meta name="theme-color" content="#ff7a1f" />
+    <title>WillCompras</title>
   </head>
   <body>
     <div id="root"></div>
